test/parser/should_succeed/until4.souc
main() = do
    until true do
        print "sub call"
        if "nested"
            print "hello"
            print "another sub call"
        else
            explode
    end until
