test/parser/should_fail/until6.souc
main() = do
	until true
		unless true do
			print "sub call"
			explode
		end if
